--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "zdefender"
-version = "0.1.0"
+version = "0.1.3"
 edition = "2021"
-authors = ["ZDefender Team"]
+authors = ["Zeirea"]
 description = "Un système de protection contre les attaques DDoS"
 
 [features]
@@ -10,7 +10,7 @@ default = []
 systemd = ["systemd-journal-logger"]
 
 [dependencies]
-tokio = { version = "1.28", features = ["full"] }
+tokio = { version = "1.28", features = ["full", "signal"] }
 pcap = "2.2.0"
 pnet = "0.35.0"
 clap = { version = "4.3", features = ["derive"] }
@@ -20,12 +20,13 @@ chrono = "0.4"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 dashmap = "6.1.0"
-rand = "0.9.1"
+rand = "0.8.5"
 crossbeam-channel = "0.5"
 futures = "0.3"
 # Dépendance conditionnelle pour systemd-journal-logger
 systemd-journal-logger = { version = "2.0.0", optional = true }
-
-# Cette section est maintenant gérée par les features plutôt que par la plateforme
-# [target.'cfg(unix)'.dependencies]
-# systemd-journal-logger = "1.0.0"
+anyhow = "1.0.98"
+num_cpus = "1.16.0"
+num-format = "0.4.4"
+async-trait = "0.1.77"
+reqwest = { version = "0.12.15", features = ["json"] }
