--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,6 @@ anyhow = "1.0.98"
 num_cpus = "1.16.0"
 num-format = "0.4.4"
 async-trait = "0.1.77"
+once_cell = "1.21.3"
+axum = "0.7"
+hyper = { version = "1.0", features = ["full"] }
