--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,33 +1,24 @@
 [package]
-name = "zdefender"
-version = "0.1.3"
+name = "zdefender2"
+version = "2.0.0"
 edition = "2021"
-authors = ["Zeirea"]
-description = "Un système de protection contre les attaques DDoS"
-
-[features]
-default = []
-systemd = ["systemd-journal-logger"]
+authors = ["ZDefender Team"]
+description = "Système de protection DDoS avancé"
 
 [dependencies]
-tokio = { version = "1.28", features = ["full", "signal"] }
-pcap = "2.2.0"
-pnet = "0.35.0"
-clap = { version = "4.3", features = ["derive"] }
+# Dépendances minimales pour le développement
 log = "0.4"
-env_logger = "0.11.8"
-chrono = "0.4"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-dashmap = "6.1.0"
-rand = "0.9.1"
-futures = "0.3"
-# Dépendance conditionnelle pour systemd-journal-logger
-systemd-journal-logger = { version = "2.0.0", optional = true }
-anyhow = "1.0.98"
-num_cpus = "1.16.0"
-num-format = "0.4.4"
-async-trait = "0.1.77"
-once_cell = "1.21.3"
-axum = "0.7"
-hyper = { version = "1.0", features = ["full"] }
+env_logger = "0.10"
+libc = "0.2"
+nix = "0.26"
+tempfile = "3.20.0"
+serde_json = "1.0.140"
+tokio = "1.45.1"
+serde = { version = "1.0.219", features = ["derive"] }
+
+[profile.release]
+opt-level = 3
+lto = true
+codegen-units = 1
+panic = 'abort'
+strip = true 
